Fixed table overflow issue

--- a/src/components/schedule/schedule.css
+++ b/src/components/schedule/schedule.css
@@ -3,6 +3,7 @@
   align-items: center;
   flex-direction: column;
   overflow-x: auto;
+  height: 1;
 }
 
 table {
@@ -47,7 +48,7 @@ table {
   }
 
   .schedule-table table th {
-    font-size: 17px;
+    font-size: 14px;
     padding: 0px;
   }
 
